# sshless

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  requirements.txt  setup.cfg  tox.ini
sshless/: __main__.py  cli.py  core.py  util.py
test/: DOC.rst  README.rst  conftest.py  test_cli.py  test_core_sshless.py  test_util.py
test/cassettes/: test_cmd_with_instances_ids[sshless_cmd0].yaml  test_list_commands[7ce628a4-e96c-4a52-88be-027750b6bf58].yaml  test_list_commands[empty].yaml  test_list_commands_ok[7ce628a4-e96c-4a52-88be-027750b6bf58].yaml  test_list_commands_ok[empty].yaml
test/terraform/: azure.tf  ec2.tf  iam-service.tf  iam.tf  legacy.tf  main.tf  run.sh  ssm.tf  user_data.tpl  vpc.bak  vpc.tf
