[metadata]
name = sshless
author = cloudreach
author-email = oss@cloudreach.com
description-file =
    README.rst
summary = sshless using AWS SSM
project_urls =
    Bug Tracker = https://github.com/cloudreach/sshless/issues
    Documentation = https://github.com/cloudreach/sshless/blob/master/README.rst
    Source Code = https://github.com/cloudreach/sshless
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Environment :: Console
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6

[pbr]
skip_authors = True

[entry_points]
console_scripts =
    sshless = sshless.cli:cli


[extras]
dev =
    pytest
    tox
    pytest-vcr
